<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.maven.ide.eclipse.gdt</groupId>
  <artifactId>org.maven.ide.eclipse.gdt</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Maven Integration for Google Eclipse Plugin : parent</name>

 
  <properties>
  	<maven.version>3.0-alpha-7</maven.version>
  	<tycho.version>0.9.0</tycho.version>
    <tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
	<target.platform>m2e-gdt-36</target.platform>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.1</version>
        <configuration>
          <!-- http://maven.apache.org/plugins/maven-compiler-plugin/ -->
          <source>1.5</source>
          <target>1.5</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.sonatype.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho.version}</version>
        <extensions>true</extensions>
      </plugin>

      <plugin>
        <groupId>org.sonatype.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho.version}</version>
        <configuration>
          <resolver>p2</resolver>
          <target>
            <artifact>
			  <groupId>org.maven.ide.eclipse.gdt</groupId>
			  <artifactId>org.maven.ide.eclipse.gdt.target-platform</artifactId>
			  <version>${project.version}</version>
              <classifier>${target.platform}</classifier>
            </artifact>
          </target>
          <ignoreTychoRepositories>true</ignoreTychoRepositories>
        </configuration>
      </plugin>

    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.sonatype.tycho</groupId>
          <artifactId>maven-osgi-lifecycle-plugin</artifactId>
          <version>${tycho.version}</version>
        </plugin>
        <plugin>
          <groupId>org.sonatype.tycho</groupId>
          <artifactId>maven-osgi-packaging-plugin</artifactId>
          <version>${tycho.version}</version>
          <configuration>
          
            <!-- workaround for TYCHO-349 or TYCHO-313 -->
            <strictVersions>false</strictVersions>
            
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.sonatype.tycho</groupId>
          <artifactId>maven-osgi-test-plugin</artifactId>
          <version>${tycho.version}</version>
          <configuration>
            <useUIHarness>true</useUIHarness>
            <includes>
              <include>**/*Test.java</include>
            </includes>
            <argLine>${tycho.test.jvmArgs}</argLine>
            <!-- kill test JVM if tests take more than 10 minutes (600 seconds) to finish -->
            <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.sonatype.tycho</groupId>
          <artifactId>maven-osgi-compiler-plugin</artifactId>
          <version>${tycho.version}</version>
          <configuration>
            <source>1.5</source>
            <target>1.5</target>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <modules>
  	<module>org.maven.ide.eclipse.gdt.target-platform</module>
  	<module>org.maven.ide.eclipse.gdt.core</module>
  	<module>org.maven.ide.eclipse.gdt.wtp</module>
  	<module>org.maven.ide.eclipse.gdt.feature</module>
  	<module>org.maven.ide.eclipse.gdt.site</module>
  </modules>  
</project>
